--- a/4-experiments/experiment4/experiment5-dataset-nih.ipynb
+++ b/4-experiments/experiment4/experiment5-dataset-nih.ipynb
@@ -4,9 +4,7 @@
   "metadata": {
     "colab": {
       "name": "experiment5-dataset-nih.ipynb",
-      "provenance": [],
-      "mount_file_id": "1Bw1YBgOdKtmEJQhIilBDN6cwvvnnOUL7",
-      "authorship_tag": "ABX9TyOPjjJ71GOr/gzAVm9pPcqm"
+      "provenance": []
     },
     "kernelspec": {
       "name": "python3",
@@ -18,17 +16,6 @@
     "accelerator": "GPU"
   },
   "cells": [
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "WGLgcqBx2V6Y"
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
     {
       "cell_type": "markdown",
       "metadata": {
@@ -74,7 +61,7 @@
         "import warnings\n",
         "warnings.filterwarnings(\"ignore\")"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -99,7 +86,7 @@
         "validation_df = pd.read_csv('/content/drive/MyDrive/validation_df.csv', sep = ',', index_col=  0)\n",
         "test_df = pd.read_csv('/content/drive/MyDrive/test_df.csv' , sep = ',', index_col=  0)"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -116,7 +103,7 @@
         "# visualizando como é a organização do dataframe pré-processado\n",
         "train_df.head()"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -206,7 +193,7 @@
         "class_weights = {0: 3902, 1: 1224, 2: 578, 3: 3645, 4: 818, 5: 671,\n",
         "                 6: 8770, 7: 55622, 8: 2497, 9: 1028, 10: 295, 11: 2024}"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -258,7 +245,7 @@
         "                                                  class_mode = 'categorical',\n",
         "                                                  target_size = (256, 256))"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -295,7 +282,7 @@
         "    https://storage.googleapis.com/mledu-datasets/inception_v3_weights_tf_dim_ordering_tf_kernels_notop.h5 \\\n",
         "    -O /tmp/inception_v3_weights_tf_dim_ordering_tf_kernels_notop.h5"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -350,7 +337,7 @@
         "last_layer = pre_trained_model.get_layer('mixed7')\n",
         "last_output = last_layer.output"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -377,7 +364,7 @@
         "model.compile(optimizer = optimizers.RMSprop(learning_rate = 0.0001), loss = 'categorical_crossentropy', \n",
         "              metrics = ['acc']) "
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -391,7 +378,7 @@
         "# callback para salvar o melhor valor dos pesos em relação ao desempenho com os dados de validação \n",
         "checkpoint = ModelCheckpoint(filepath, monitor = 'val_acc', verbose = 1, save_best_only = True, mode = 'max')"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -403,7 +390,7 @@
         "# definindo um array de callbacks\n",
         "callbacks = [checkpoint]"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -422,7 +409,7 @@
         "                              validation_data = valid_generator, validation_steps = 4268 // 256,\n",
         "                              callbacks = callbacks, epochs = 10, class_weight = class_weights)"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
