--- a/4-experiments/experiment5/network-resnet/experiment5_dataset_nih_v2_0.ipynb
+++ b/4-experiments/experiment5/network-resnet/experiment5_dataset_nih_v2_0.ipynb
@@ -7,8 +7,7 @@
       "provenance": [],
       "toc_visible": true,
       "machine_shape": "hm",
-      "authorship_tag": "ABX9TyNotmrFmuKBUOahLfLMEJ7A",
-      "include_colab_link": true
+      "authorship_tag": "ABX9TyNNWgMgIwN67Wq9W1Srh68V"
     },
     "kernelspec": {
       "name": "python3",
@@ -17,30 +16,20 @@
     "language_info": {
       "name": "python"
     },
-    "accelerator": "TPU"
+    "accelerator": "GPU"
   },
   "cells": [
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/Alyssonmach/9-Data-Science-Apps-with-Python/blob/main/4-experiments/experiment5/experiment5_dataset_nih_v2_0.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
     {
       "cell_type": "markdown",
       "metadata": {
         "id": "230MFUN7-q3r"
       },
       "source": [
-        "# Experimento 5 - ResNet\n",
+        "# Experimento 5 \n",
         "***\n",
-        "- Conjunto de dados NIH: \n",
-        "- Analisando o treinamento de uma rede com multiclassificadores\n",
-        "- Arquitetura base: ResNet"
+        "- Rede ResNet\n",
+        "- Conjunto de dados NIH\n",
+        "- Analisando o treinamento de uma rede com multiclassificadores"
       ]
     },
     {
@@ -76,7 +65,7 @@
         "import warnings\n",
         "warnings.filterwarnings(\"ignore\")"
       ],
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -99,7 +88,7 @@
         "validation_df = pd.read_csv('/content/drive/MyDrive/validation_df.csv', sep = ',', index_col=  0)\n",
         "test_df = pd.read_csv('/content/drive/MyDrive/test_df.csv' , sep = ',', index_col=  0)"
       ],
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -110,13 +99,13 @@
           "height": 204
         },
         "id": "lPfg0ASO_sXB",
-        "outputId": "aa8a9458-1fab-408f-df6c-14549bef49f3"
+        "outputId": "4e1dde32-7ed7-4521-a215-d6c719d810af"
       },
       "source": [
         "# visualizando como é a organização do dataframe pré-processado\n",
         "train_df.head()"
       ],
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -192,31 +181,50 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 6
+          "execution_count": 3
         }
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "gQ-I49sDwf5v"
+        "id": "gDMmUv4qokQB",
+        "outputId": "e87e5a7d-118e-4ebf-df57-e6db1d8c3764",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
-        "dataframe['label'].value_counts()"
+        "# visualizando a quantidade de imagens disponíveis por classe\n",
+        "train_df['finding_labels'].value_counts()"
       ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "Jn_IQpMWwqVa"
-      },
-      "source": [
-        "train_generator.classes_indices"
-      ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "No Finding            55622\n",
+              "Infiltration           8770\n",
+              "Atelectasis            3902\n",
+              "Effusion               3645\n",
+              "Nodule                 2497\n",
+              "Pneumothorax           2024\n",
+              "Consolidation          1224\n",
+              "Pleural_Thickening     1028\n",
+              "Emphysema               818\n",
+              "Fibrosis                671\n",
+              "Edema                   578\n",
+              "Pneumonia               295\n",
+              "Name: finding_labels, dtype: int64"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 4
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -224,11 +232,22 @@
         "id": "jmc61_6I_1Qx"
       },
       "source": [
-        "# dicionário com o balancemanto de imagens por classe dos dados de treinamento\n",
-        "class_weights = {0: 3902, 1: 1224, 2: 578, 3: 3645, 4: 818, 5: 671,\n",
-        "                 6: 8770, 7: 55622, 8: 2497, 9: 1028, 10: 295, 11: 2024}"
+        "# organizando o balanceamento das classes\n",
+        "total_train_examples = 55622 + 8770 + 3902 + 3645 + 2497 + 2024 + 1224 + 1028 + 818 + 671 + 578 + 295\n",
+        "class_weight = {0: total_train_examples / 55622,\n",
+        "                1: total_train_examples / 8770,\n",
+        "                2: total_train_examples / 3902,\n",
+        "                3: total_train_examples / 3645,\n",
+        "                4: total_train_examples / 2497,\n",
+        "                5: total_train_examples / 2024,\n",
+        "                6: total_train_examples / 1224,\n",
+        "                7: total_train_examples / 1028,\n",
+        "                8: total_train_examples / 818,\n",
+        "                9: total_train_examples / 671,\n",
+        "                10: total_train_examples / 578,\n",
+        "                11: total_train_examples / 295}"
       ],
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -238,7 +257,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "U_kUYb8f_5la",
-        "outputId": "3ecc3ae6-60c8-4c8b-f350-bec5489904fa"
+        "outputId": "b55e6f0d-d255-4176-b00b-4ad6b607c51d"
       },
       "source": [
         "# normalizando as imagens de treinamento e aplicando aumento de dados\n",
@@ -249,7 +268,7 @@
         "                                                      dataframe = train_df,\n",
         "                                                      x_col = 'Image Index',\n",
         "                                                      y_col = 'finding_labels',\n",
-        "                                                      batch_size = 512,\n",
+        "                                                      batch_size = 256,\n",
         "                                                      seed = 42,\n",
         "                                                      shuffle = True,\n",
         "                                                      class_mode = 'categorical',\n",
@@ -264,7 +283,7 @@
         "                                                    dataframe = validation_df,\n",
         "                                                    x_col = 'Image Index',\n",
         "                                                    y_col = 'finding_labels',\n",
-        "                                                    batch_size = 256,\n",
+        "                                                    batch_size = 128,\n",
         "                                                    seed = 42,\n",
         "                                                    shuffle = True,\n",
         "                                                    class_mode = 'categorical',\n",
@@ -274,18 +293,18 @@
         "                                                  dataframe = test_df, \n",
         "                                                  x_col = 'Image Index',\n",
         "                                                  y_col = 'finding_labels',\n",
-        "                                                  batch_size = 256,\n",
+        "                                                  batch_size = 128,\n",
         "                                                  seed = 42,\n",
         "                                                  shuffle = True,\n",
         "                                                  class_mode = 'categorical',\n",
         "                                                  target_size = (256, 256))"
       ],
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Found 81070 validated image filenames belonging to 12 classes.\n",
+            "Found 81074 validated image filenames belonging to 12 classes.\n",
             "Found 4268 validated image filenames belonging to 12 classes.\n",
             "Found 2640 validated image filenames belonging to 12 classes.\n"
           ],
@@ -305,39 +324,30 @@
     {
       "cell_type": "code",
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "Bn5WcQTg_8Ls",
-        "outputId": "f6a55f4c-c682-4192-c68f-b85a07936d17"
+        "id": "Bn5WcQTg_8Ls"
       },
       "source": [
         "# realizando a transferência de aprendizagem com a rede ResNet\n",
-        "base_model = ResNet152(weights='imagenet', include_top=False)\n",
+        "base_model = ResNet152(input_shape = (256, 256, 3), weights = 'imagenet', include_top = False)\n",
         "\n",
         "# pegando a última camada da DenseNet\n",
         "x = base_model.output\n",
-        "\n",
         "# adicionando uma camada de Global Average Pooling\n",
         "x = layers.GlobalAveragePooling2D()(x)\n",
-        "\n",
+        "# adicionando uma camada densa com 512 neurônios\n",
+        "x = layers.Dense(units = 512, activation = tf.nn.relu)(x)     \n",
+        "# conecatando a rede uma camada com 128 neurônios e função de ativação relu\n",
+        "x = layers.Dense(units = 256, activation = tf.nn.relu)(x) \n",
+        "# aplicando uma camada de dropout com uma taxa de 20% (normalização)\n",
+        "x = layers.Dropout(rate = 0.2)(x)\n",
         "# adicionando a camada de saída da rede \n",
-        "predictions = layers.Dense(units = 12, activation = 'softmax')(x)\n",
+        "predictions = layers.Dense(units = 12, activation = tf.nn.softmax)(x)\n",
         "\n",
         "# concatenando a rede importada com a rede definida (ajuste fino)\n",
         "model = Model(inputs=base_model.input, outputs=predictions)"
       ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Downloading data from https://storage.googleapis.com/tensorflow/keras-applications/resnet/resnet152_weights_tf_dim_ordering_tf_kernels_notop.h5\n",
-            "234700800/234698864 [==============================] - 2s 0us/step\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": 7,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -358,7 +368,7 @@
         "    else:\n",
         "        layer.trainable = False"
       ],
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -371,7 +381,7 @@
         "model.compile(optimizer = optimizers.RMSprop(learning_rate = 0.0001), loss = 'categorical_crossentropy', \n",
         "              metrics = ['acc'])"
       ],
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -386,7 +396,7 @@
         "checkpoint = ModelCheckpoint(filepath, monitor = 'val_acc', verbose = 1, save_best_only = True, \n",
         "                             mode = 'max')"
       ],
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": []
     },
     {
@@ -398,7 +408,7 @@
         "# definindo um array de callbacks\n",
         "callbacks = [checkpoint]"
       ],
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": []
     },
     {
@@ -408,21 +418,22 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "t3ZOITCvD0GW",
-        "outputId": "534d7bc6-73cd-419b-8ebf-c4202d5dcae0"
+        "outputId": "b03208ec-09c0-4d30-9d2a-d7cfccf1399e"
       },
       "source": [
         "# treinando a rede neural convolucional\n",
-        "history = model.fit_generator(train_generator, steps_per_epoch = 81072 // 512, \n",
-        "                              validation_data = valid_generator, validation_steps = 4268 // 256,\n",
-        "                              callbacks = callbacks, epochs = 10, class_weight = class_weights)"
+        "history = model.fit_generator(train_generator, steps_per_epoch = 81072 // 256, \n",
+        "                              validation_data = valid_generator, validation_steps = 4268 // 128,\n",
+        "                              callbacks = callbacks, epochs = 1, class_weight = class_weight,\n",
+        "                              use_multiprocessing = True, workers = 4)"
       ],
       "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Epoch 1/10\n",
-            " 90/158 [================>.............] - ETA: 4:10:53 - loss: 13339.8017 - acc: 0.6524"
+            "WARNING:tensorflow:multiprocessing can interact badly with TensorFlow, causing nondeterministic deadlocks. For high performance data pipelines tf.data is recommended.\n",
+            " 24/316 [=>............................] - ETA: 1:16:58 - loss: 112.7497 - acc: 0.5704"
           ],
           "name": "stdout"
         }
