--- a/4-experiments/experiment5/network-inception/experiment5-dataset-nih-v1.0.ipynb
+++ b/4-experiments/experiment5/network-inception/experiment5-dataset-nih-v1.0.ipynb
@@ -188,11 +188,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "9QGd53xcdiiY",
-        "outputId": "3ec2504f-4707-42be-c99e-f8d69675bb9a",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "9QGd53xcdiiY",
+        "outputId": "3ec2504f-4707-42be-c99e-f8d69675bb9a"
       },
       "source": [
         "# visualizando a quantidade de imagens disponíveis por classe\n",
@@ -452,7 +452,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "CwaUi23Z659p",
-        "outputId": "c8440a9d-9a7f-43dd-907a-5e9bd8082f3a"
+        "outputId": "ba184034-9a7e-4292-f642-07da1df3fe22"
       },
       "source": [
         "# treinando a rede neural convolucional\n",
@@ -461,13 +461,146 @@
         "                              callbacks = callbacks, epochs = 1, class_weight = class_weight,\n",
         "                              use_multiprocessing = True, workers = 4)"
       ],
-      "execution_count": null,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "WARNING:tensorflow:multiprocessing can interact badly with TensorFlow, causing nondeterministic deadlocks. For high performance data pipelines tf.data is recommended.\n",
-            "147/316 [============>.................] - ETA: 56:28 - loss: 100.3639 - acc: 0.6569"
+            "316/316 [==============================] - ETA: 0s - loss: 89.9834 - acc: 0.6701 WARNING:tensorflow:multiprocessing can interact badly with TensorFlow, causing nondeterministic deadlocks. For high performance data pipelines tf.data is recommended.\n",
+            "316/316 [==============================] - 7489s 23s/step - loss: 89.9483 - acc: 0.6701 - val_loss: 1.3475 - val_acc: 0.6823\n",
+            "\n",
+            "Epoch 00001: val_acc improved from -inf to 0.68229, saving model to /content/drive/MyDrive/weights-nih/inception/transferlearning_weights_v1.0.hdf5\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "FdlW1nZ5Mkls"
+      },
+      "source": [
+        "# definindo o caminho pelo qual os pesos serão armazenados \n",
+        "filepath = \"/content/drive/MyDrive/weights-nih/inception/transferlearning_weights_v1.1.hdf5\"\n",
+        "# callback para salvar o melhor valor dos pesos em relação ao desempenho com os dados de validação \n",
+        "checkpoint = ModelCheckpoint(filepath, monitor = 'val_acc', verbose = 1, save_best_only = True, mode = 'max')\n",
+        "# definindo um array de callbacks\n",
+        "callbacks = [checkpoint]"
+      ],
+      "execution_count": 14,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "dOKQx5bmMp2X",
+        "outputId": "c5667e14-3add-43ba-9c9a-d2d71e18ef83",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# treinando a rede neural convolucional\n",
+        "history = model.fit_generator(train_generator, steps_per_epoch = 81072 // 256, \n",
+        "                              validation_data = valid_generator, validation_steps = 4268 // 128,\n",
+        "                              callbacks = callbacks, epochs = 1, class_weight = class_weight,\n",
+        "                              use_multiprocessing = True, workers = 8)"
+      ],
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "WARNING:tensorflow:multiprocessing can interact badly with TensorFlow, causing nondeterministic deadlocks. For high performance data pipelines tf.data is recommended.\n",
+            "316/316 [==============================] - ETA: 0s - loss: 71.3411 - acc: 0.6772WARNING:tensorflow:multiprocessing can interact badly with TensorFlow, causing nondeterministic deadlocks. For high performance data pipelines tf.data is recommended.\n",
+            "316/316 [==============================] - 1100s 3s/step - loss: 71.3411 - acc: 0.6772 - val_loss: 1.3273 - val_acc: 0.6811\n",
+            "\n",
+            "Epoch 00001: val_acc improved from -inf to 0.68111, saving model to /content/drive/MyDrive/weights-nih/inception/transferlearning_weights_v1.1.hdf5\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "uNvQ3LCVRIeQ",
+        "outputId": "31158074-332e-4d14-c222-3910e928266d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# treinando a rede neural convolucional\n",
+        "history = model.fit_generator(train_generator, steps_per_epoch = 81072 // 256, \n",
+        "                              validation_data = valid_generator, validation_steps = 4268 // 128,\n",
+        "                              callbacks = callbacks, epochs = 10, class_weight = class_weight,\n",
+        "                              use_multiprocessing = True, workers = 16)"
+      ],
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Epoch 1/10\n",
+            "WARNING:tensorflow:multiprocessing can interact badly with TensorFlow, causing nondeterministic deadlocks. For high performance data pipelines tf.data is recommended.\n",
+            "316/316 [==============================] - ETA: 0s - loss: 68.9606 - acc: 0.6764WARNING:tensorflow:multiprocessing can interact badly with TensorFlow, causing nondeterministic deadlocks. For high performance data pipelines tf.data is recommended.\n",
+            "316/316 [==============================] - 1137s 4s/step - loss: 68.9606 - acc: 0.6764 - val_loss: 1.3316 - val_acc: 0.6830\n",
+            "\n",
+            "Epoch 00001: val_acc improved from 0.68111 to 0.68300, saving model to /content/drive/MyDrive/weights-nih/inception/transferlearning_weights_v1.1.hdf5\n",
+            "Epoch 2/10\n",
+            "WARNING:tensorflow:multiprocessing can interact badly with TensorFlow, causing nondeterministic deadlocks. For high performance data pipelines tf.data is recommended.\n",
+            "316/316 [==============================] - ETA: 0s - loss: 67.5042 - acc: 0.6776WARNING:tensorflow:multiprocessing can interact badly with TensorFlow, causing nondeterministic deadlocks. For high performance data pipelines tf.data is recommended.\n",
+            "316/316 [==============================] - 1121s 3s/step - loss: 67.5042 - acc: 0.6776 - val_loss: 1.3645 - val_acc: 0.6823\n",
+            "\n",
+            "Epoch 00002: val_acc did not improve from 0.68300\n",
+            "Epoch 3/10\n",
+            "WARNING:tensorflow:multiprocessing can interact badly with TensorFlow, causing nondeterministic deadlocks. For high performance data pipelines tf.data is recommended.\n",
+            "316/316 [==============================] - ETA: 0s - loss: 66.0993 - acc: 0.6791WARNING:tensorflow:multiprocessing can interact badly with TensorFlow, causing nondeterministic deadlocks. For high performance data pipelines tf.data is recommended.\n",
+            "316/316 [==============================] - 1132s 4s/step - loss: 66.0993 - acc: 0.6791 - val_loss: 1.3452 - val_acc: 0.6875\n",
+            "\n",
+            "Epoch 00003: val_acc improved from 0.68300 to 0.68750, saving model to /content/drive/MyDrive/weights-nih/inception/transferlearning_weights_v1.1.hdf5\n",
+            "Epoch 4/10\n",
+            "WARNING:tensorflow:multiprocessing can interact badly with TensorFlow, causing nondeterministic deadlocks. For high performance data pipelines tf.data is recommended.\n",
+            "316/316 [==============================] - ETA: 0s - loss: 64.7467 - acc: 0.6803WARNING:tensorflow:multiprocessing can interact badly with TensorFlow, causing nondeterministic deadlocks. For high performance data pipelines tf.data is recommended.\n",
+            "316/316 [==============================] - 1147s 4s/step - loss: 64.7467 - acc: 0.6803 - val_loss: 1.2890 - val_acc: 0.6823\n",
+            "\n",
+            "Epoch 00004: val_acc did not improve from 0.68750\n",
+            "Epoch 5/10\n",
+            "WARNING:tensorflow:multiprocessing can interact badly with TensorFlow, causing nondeterministic deadlocks. For high performance data pipelines tf.data is recommended.\n",
+            "316/316 [==============================] - ETA: 0s - loss: 63.7051 - acc: 0.6824WARNING:tensorflow:multiprocessing can interact badly with TensorFlow, causing nondeterministic deadlocks. For high performance data pipelines tf.data is recommended.\n",
+            "316/316 [==============================] - 1131s 4s/step - loss: 63.7051 - acc: 0.6824 - val_loss: 1.2943 - val_acc: 0.6811\n",
+            "\n",
+            "Epoch 00005: val_acc did not improve from 0.68750\n",
+            "Epoch 6/10\n",
+            "WARNING:tensorflow:multiprocessing can interact badly with TensorFlow, causing nondeterministic deadlocks. For high performance data pipelines tf.data is recommended.\n",
+            "316/316 [==============================] - ETA: 0s - loss: 62.5744 - acc: 0.6833WARNING:tensorflow:multiprocessing can interact badly with TensorFlow, causing nondeterministic deadlocks. For high performance data pipelines tf.data is recommended.\n",
+            "316/316 [==============================] - 1178s 4s/step - loss: 62.5744 - acc: 0.6833 - val_loss: 1.3209 - val_acc: 0.6809\n",
+            "\n",
+            "Epoch 00006: val_acc did not improve from 0.68750\n",
+            "Epoch 7/10\n",
+            "WARNING:tensorflow:multiprocessing can interact badly with TensorFlow, causing nondeterministic deadlocks. For high performance data pipelines tf.data is recommended.\n",
+            "316/316 [==============================] - ETA: 0s - loss: 61.4935 - acc: 0.6849WARNING:tensorflow:multiprocessing can interact badly with TensorFlow, causing nondeterministic deadlocks. For high performance data pipelines tf.data is recommended.\n",
+            "316/316 [==============================] - 1191s 4s/step - loss: 61.4935 - acc: 0.6849 - val_loss: 1.2756 - val_acc: 0.6818\n",
+            "\n",
+            "Epoch 00007: val_acc did not improve from 0.68750\n",
+            "Epoch 8/10\n",
+            "WARNING:tensorflow:multiprocessing can interact badly with TensorFlow, causing nondeterministic deadlocks. For high performance data pipelines tf.data is recommended.\n",
+            "316/316 [==============================] - ETA: 0s - loss: 60.5643 - acc: 0.6860WARNING:tensorflow:multiprocessing can interact badly with TensorFlow, causing nondeterministic deadlocks. For high performance data pipelines tf.data is recommended.\n",
+            "316/316 [==============================] - 1195s 4s/step - loss: 60.5643 - acc: 0.6860 - val_loss: 1.3396 - val_acc: 0.6740\n",
+            "\n",
+            "Epoch 00008: val_acc did not improve from 0.68750\n",
+            "Epoch 9/10\n",
+            "WARNING:tensorflow:multiprocessing can interact badly with TensorFlow, causing nondeterministic deadlocks. For high performance data pipelines tf.data is recommended.\n",
+            "316/316 [==============================] - ETA: 0s - loss: 59.3453 - acc: 0.6880WARNING:tensorflow:multiprocessing can interact badly with TensorFlow, causing nondeterministic deadlocks. For high performance data pipelines tf.data is recommended.\n",
+            "316/316 [==============================] - 1195s 4s/step - loss: 59.3453 - acc: 0.6880 - val_loss: 1.2804 - val_acc: 0.6896\n",
+            "\n",
+            "Epoch 00009: val_acc improved from 0.68750 to 0.68963, saving model to /content/drive/MyDrive/weights-nih/inception/transferlearning_weights_v1.1.hdf5\n",
+            "Epoch 10/10\n",
+            "WARNING:tensorflow:multiprocessing can interact badly with TensorFlow, causing nondeterministic deadlocks. For high performance data pipelines tf.data is recommended.\n",
+            "250/316 [======================>.......] - ETA: 3:50 - loss: 58.2229 - acc: 0.6894"
           ],
           "name": "stdout"
         }
