--- a/4-experiments/experiment5/network-resnet/experiment5_dataset_nih_v2_0.ipynb
+++ b/4-experiments/experiment5/network-resnet/experiment5_dataset_nih_v2_0.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "toc_visible": true,
       "machine_shape": "hm",
-      "authorship_tag": "ABX9TyNNWgMgIwN67Wq9W1Srh68V"
+      "authorship_tag": "ABX9TyP9lkM/fui6WX9QIHqTnTN1"
     },
     "kernelspec": {
       "name": "python3",
@@ -188,11 +188,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "gDMmUv4qokQB",
-        "outputId": "e87e5a7d-118e-4ebf-df57-e6db1d8c3764",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "gDMmUv4qokQB",
+        "outputId": "e87e5a7d-118e-4ebf-df57-e6db1d8c3764"
       },
       "source": [
         "# visualizando a quantidade de imagens disponíveis por classe\n",
@@ -418,7 +418,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "t3ZOITCvD0GW",
-        "outputId": "b03208ec-09c0-4d30-9d2a-d7cfccf1399e"
+        "outputId": "c34e1c23-ed36-47d7-f6b2-565db53b9b13"
       },
       "source": [
         "# treinando a rede neural convolucional\n",
@@ -427,13 +427,93 @@
         "                              callbacks = callbacks, epochs = 1, class_weight = class_weight,\n",
         "                              use_multiprocessing = True, workers = 4)"
       ],
-      "execution_count": null,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "WARNING:tensorflow:multiprocessing can interact badly with TensorFlow, causing nondeterministic deadlocks. For high performance data pipelines tf.data is recommended.\n",
-            " 24/316 [=>............................] - ETA: 1:16:58 - loss: 112.7497 - acc: 0.5704"
+            "316/316 [==============================] - ETA: 0s - loss: 87.0885 - acc: 0.6717 WARNING:tensorflow:multiprocessing can interact badly with TensorFlow, causing nondeterministic deadlocks. For high performance data pipelines tf.data is recommended.\n",
+            "316/316 [==============================] - 7123s 22s/step - loss: 87.0716 - acc: 0.6718 - val_loss: 1.4221 - val_acc: 0.6866\n",
+            "\n",
+            "Epoch 00001: val_acc improved from -inf to 0.68655, saving model to /content/drive/MyDrive/weights-nih/resnet/transferlearning_weights_v2.0.hdf5\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "rXuX6oxtM2tX"
+      },
+      "source": [
+        "# definindo o caminho pelo qual os pesos serão armazenados \n",
+        "filepath = \"/content/drive/MyDrive/weights-nih/resnet/transferlearning_weights_v2.1.hdf5\"\n",
+        "# callback para salvar o melhor valor dos pesos em relação ao desempenho com os dados de validação \n",
+        "checkpoint = ModelCheckpoint(filepath, monitor = 'val_acc', verbose = 1, save_best_only = True, \n",
+        "                             mode = 'max')\n",
+        "# definindo um array de callbacks\n",
+        "callbacks = [checkpoint]"
+      ],
+      "execution_count": 13,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "xsTxvC30M6YU",
+        "outputId": "d8e2452c-d6f2-4979-ae83-6ec6de44fae6",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# treinando a rede neural convolucional\n",
+        "history = model.fit_generator(train_generator, steps_per_epoch = 81072 // 256, \n",
+        "                              validation_data = valid_generator, validation_steps = 4268 // 128,\n",
+        "                              callbacks = callbacks, epochs = 1, class_weight = class_weight,\n",
+        "                              use_multiprocessing = True, workers = 8)"
+      ],
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "WARNING:tensorflow:multiprocessing can interact badly with TensorFlow, causing nondeterministic deadlocks. For high performance data pipelines tf.data is recommended.\n",
+            "316/316 [==============================] - ETA: 0s - loss: 78.7139 - acc: 0.6861WARNING:tensorflow:multiprocessing can interact badly with TensorFlow, causing nondeterministic deadlocks. For high performance data pipelines tf.data is recommended.\n",
+            "316/316 [==============================] - 2391s 7s/step - loss: 78.7139 - acc: 0.6861 - val_loss: 1.6361 - val_acc: 0.6866\n",
+            "\n",
+            "Epoch 00001: val_acc improved from -inf to 0.68655, saving model to /content/drive/MyDrive/weights-nih/resnet/transferlearning_weights_v2.1.hdf5\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "5r2i8lBvRSxQ",
+        "outputId": "9e680678-504b-45f9-df5f-5ac16ee7b7b5",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# treinando a rede neural convolucional\n",
+        "history = model.fit_generator(train_generator, steps_per_epoch = 81072 // 256, \n",
+        "                              validation_data = valid_generator, validation_steps = 4268 // 128,\n",
+        "                              callbacks = callbacks, epochs = 10, class_weight = class_weight,\n",
+        "                              use_multiprocessing = True, workers = 16)"
+      ],
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Epoch 1/10\n",
+            "WARNING:tensorflow:multiprocessing can interact badly with TensorFlow, causing nondeterministic deadlocks. For high performance data pipelines tf.data is recommended.\n",
+            "  1/316 [..............................] - ETA: 4:13:02 - loss: 78.7686 - acc: 0.6914"
           ],
           "name": "stdout"
         }
