--- a/4-experiments/experiment5/network-densenet/experiment5_dataset_nih_v3_0.ipynb
+++ b/4-experiments/experiment5/network-densenet/experiment5_dataset_nih_v3_0.ipynb
@@ -5,9 +5,8 @@
     "colab": {
       "name": "experiment5-dataset-nih-v3.0.ipynb",
       "provenance": [],
-      "toc_visible": true,
       "machine_shape": "hm",
-      "authorship_tag": "ABX9TyO+rdSLBE4DaOp1fJA7zC+b"
+      "authorship_tag": "ABX9TyMzqTi97jxsOF/3/hxjNq1A"
     },
     "kernelspec": {
       "name": "python3",
@@ -180,10 +179,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "1iFNiqinl4G2",
-        "outputId": "74cf1395-3522-416b-cab2-5df57f954183",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "74cf1395-3522-416b-cab2-5df57f954183"
       },
       "source": [
         "# visualizando a quantidade de imagens disponíveis por classe\n",
@@ -405,10 +404,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "JMXNpIAUmZrn",
-        "outputId": "fca3a348-6bf2-4a93-ffcd-05b600ad3a18",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "1c2b6e50-e1e0-47c8-a6eb-32cf71c6a07e"
       },
       "source": [
         "# treinando a rede neural convolucional\n",
@@ -423,11 +422,26 @@
           "output_type": "stream",
           "text": [
             "WARNING:tensorflow:multiprocessing can interact badly with TensorFlow, causing nondeterministic deadlocks. For high performance data pipelines tf.data is recommended.\n",
-            "  4/316 [..............................] - ETA: 2:55 - loss: 155.3667 - acc: 0.3506"
+            "267/316 [========================>.....] - ETA: 30:30 - loss: 82.5057 - acc: 0.6656"
           ],
           "name": "stdout"
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "VHy239u4RVC5"
+      },
+      "source": [
+        "# treinando a rede neural convolucional\n",
+        "history = model.fit_generator(train_generator, steps_per_epoch = 81072 // 256, \n",
+        "                              validation_data = valid_generator, validation_steps = 4268 // 128,\n",
+        "                              callbacks = callbacks, epochs = 10, class_weight = class_weight,\n",
+        "                              use_multiprocessing = True, workers = 16)"
+      ],
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
