--- a/4-experiments/experiment5/network-densenet/experiment5_dataset_nih_v3_0.ipynb
+++ b/4-experiments/experiment5/network-densenet/experiment5_dataset_nih_v3_0.ipynb
@@ -5,8 +5,9 @@
     "colab": {
       "name": "experiment5-dataset-nih-v3.0.ipynb",
       "provenance": [],
+      "toc_visible": true,
       "machine_shape": "hm",
-      "authorship_tag": "ABX9TyMzqTi97jxsOF/3/hxjNq1A"
+      "authorship_tag": "ABX9TyNdbI6UHlwUD2EH996qYqHc"
     },
     "kernelspec": {
       "name": "python3",
@@ -64,7 +65,7 @@
         "import warnings\n",
         "warnings.filterwarnings(\"ignore\")"
       ],
-      "execution_count": 2,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -78,7 +79,26 @@
         "validation_df = pd.read_csv('/content/drive/MyDrive/validation_df.csv', sep = ',', index_col=  0)\n",
         "test_df = pd.read_csv('/content/drive/MyDrive/test_df.csv' , sep = ',', index_col=  0)"
       ],
-      "execution_count": 4,
+      "execution_count": 20,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "rHLcRLm55gyO"
+      },
+      "source": [
+        "# tornando as classes na coluna 'labels' categórica\n",
+        "train_df.loc[train_df.labels == 1, 'labels'] = 'abnormal'\n",
+        "train_df.loc[train_df.labels == 0, 'labels'] = 'normal'\n",
+        "\n",
+        "validation_df.loc[validation_df.labels == 1, 'labels'] = 'abnormal'\n",
+        "validation_df.loc[validation_df.labels == 0, 'labels'] = 'normal'\n",
+        "\n",
+        "test_df.loc[test_df.labels == 1, 'labels'] = 'abnormal'\n",
+        "test_df.loc[test_df.labels == 0, 'labels'] = 'normal'"
+      ],
+      "execution_count": 21,
       "outputs": []
     },
     {
@@ -89,13 +109,13 @@
           "height": 204
         },
         "id": "g1HO3ajAl1mf",
-        "outputId": "5a06f3e8-44f1-46bc-a649-d493598852e9"
+        "outputId": "2360faed-d20a-4f2d-ea4a-79f03c6ef171"
       },
       "source": [
         "# visualizando como é a organização do dataframe pré-processado\n",
         "train_df.head()"
       ],
-      "execution_count": 5,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -171,7 +191,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 5
+          "execution_count": 4
         }
       ]
     },
@@ -182,13 +202,13 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "74cf1395-3522-416b-cab2-5df57f954183"
+        "outputId": "91a2f825-77b1-43cb-8809-bb75fd68a4d8"
       },
       "source": [
         "# visualizando a quantidade de imagens disponíveis por classe\n",
         "train_df['finding_labels'].value_counts()"
       ],
-      "execution_count": 6,
+      "execution_count": 26,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -212,7 +232,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 6
+          "execution_count": 26
         }
       ]
     },
@@ -224,20 +244,20 @@
       "source": [
         "# organizando o balanceamento das classes\n",
         "total_train_examples = 55622 + 8770 + 3902 + 3645 + 2497 + 2024 + 1224 + 1028 + 818 + 671 + 578 + 295\n",
-        "class_weight = {0: total_train_examples / 55622,\n",
-        "                1: total_train_examples / 8770,\n",
-        "                2: total_train_examples / 3902,\n",
+        "class_weight = {0: total_train_examples / 3902,\n",
+        "                1: total_train_examples / 1224,\n",
+        "                2: total_train_examples / 578,\n",
         "                3: total_train_examples / 3645,\n",
-        "                4: total_train_examples / 2497,\n",
-        "                5: total_train_examples / 2024,\n",
-        "                6: total_train_examples / 1224,\n",
-        "                7: total_train_examples / 1028,\n",
-        "                8: total_train_examples / 818,\n",
-        "                9: total_train_examples / 671,\n",
-        "                10: total_train_examples / 578,\n",
-        "                11: total_train_examples / 295}"
+        "                4: total_train_examples / 818,\n",
+        "                5: total_train_examples / 671,\n",
+        "                6: total_train_examples / 8770,\n",
+        "                7: total_train_examples / 55622,\n",
+        "                8: total_train_examples / 2497,\n",
+        "                9: total_train_examples / 1028,\n",
+        "                10: total_train_examples / 295,\n",
+        "                11: total_train_examples / 2024}"
       ],
-      "execution_count": 7,
+      "execution_count": 36,
       "outputs": []
     },
     {
@@ -247,7 +267,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "WsfuAOIrl4vX",
-        "outputId": "699318e3-d69e-427c-d1e6-a97100e0a11c"
+        "outputId": "4743f972-5a46-43e9-bb9b-4f52ed4258db"
       },
       "source": [
         "# normalizando as imagens de treinamento e aplicando aumento de dados\n",
@@ -289,16 +309,56 @@
         "                                                  class_mode = 'categorical',\n",
         "                                                  target_size = (256, 256))"
       ],
-      "execution_count": 10,
+      "execution_count": 28,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Found 81074 validated image filenames belonging to 12 classes.\n",
+            "Found 81070 validated image filenames belonging to 12 classes.\n",
             "Found 4268 validated image filenames belonging to 12 classes.\n",
             "Found 2640 validated image filenames belonging to 12 classes.\n"
           ],
           "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "34NNyYGR97Cr",
+        "outputId": "757753bf-c471-4632-9dde-8ef5153f017a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# visualizando a ordem numérica das classes\n",
+        "train_generator.class_indices"
+      ],
+      "execution_count": 35,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{'Atelectasis': 0,\n",
+              " 'Consolidation': 1,\n",
+              " 'Edema': 2,\n",
+              " 'Effusion': 3,\n",
+              " 'Emphysema': 4,\n",
+              " 'Fibrosis': 5,\n",
+              " 'Infiltration': 6,\n",
+              " 'No Finding': 7,\n",
+              " 'Nodule': 8,\n",
+              " 'Pleural_Thickening': 9,\n",
+              " 'Pneumonia': 10,\n",
+              " 'Pneumothorax': 11}"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 35
         }
       ]
     },
@@ -314,7 +374,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "6IZSxdnHl7n2"
+        "id": "6IZSxdnHl7n2",
+        "outputId": "2a49f665-1413-4ef0-afcf-7a5ce405e42c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "base_model = DenseNet121(input_shape = (256, 256, 3), weights = 'imagenet', include_top = False)\n",
@@ -335,8 +399,17 @@
         "# concatenando a rede importada com a rede definida (ajuste fino)\n",
         "model = Model(inputs=base_model.input, outputs=predictions)"
       ],
-      "execution_count": 11,
-      "outputs": []
+      "execution_count": 29,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Downloading data from https://storage.googleapis.com/tensorflow/keras-applications/densenet/densenet121_weights_tf_dim_ordering_tf_kernels_notop.h5\n",
+            "29089792/29084464 [==============================] - 0s 0us/step\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -350,14 +423,14 @@
         "\n",
         "# para a arquitetura DenseNet, a rede será retreinada a partir da camada 'conv5_block1_1_conv'\n",
         "for layer in model.layers:\n",
-        "    if layer.name == 'conv5_block1_1_conv':\n",
+        "    if layer.name == 'conv4_block1_1_conv':\n",
         "        set_trainable = True\n",
         "    if set_trainable:\n",
         "        layer.trainable = True\n",
         "    else:\n",
         "        layer.trainable = False"
       ],
-      "execution_count": 13,
+      "execution_count": 30,
       "outputs": []
     },
     {
@@ -370,7 +443,7 @@
         "model.compile(optimizer = optimizers.RMSprop(learning_rate = 0.0001), loss = 'categorical_crossentropy', \n",
         "              metrics = ['acc'])"
       ],
-      "execution_count": 14,
+      "execution_count": 31,
       "outputs": []
     },
     {
@@ -385,7 +458,7 @@
         "checkpoint = ModelCheckpoint(filepath, monitor = 'val_acc', verbose = 1, save_best_only = True, \n",
         "                             mode = 'max')"
       ],
-      "execution_count": 15,
+      "execution_count": 32,
       "outputs": []
     },
     {
@@ -397,7 +470,7 @@
         "# definindo um array de callbacks\n",
         "callbacks = [checkpoint]"
       ],
-      "execution_count": 16,
+      "execution_count": 33,
       "outputs": []
     },
     {
@@ -407,41 +480,27 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "1c2b6e50-e1e0-47c8-a6eb-32cf71c6a07e"
-      },
-      "source": [
-        "# treinando a rede neural convolucional\n",
-        "history = model.fit_generator(train_generator, steps_per_epoch = 81072 // 256, \n",
-        "                              validation_data = valid_generator, validation_steps = 4268 // 128,\n",
-        "                              callbacks = callbacks, epochs = 1, class_weight = class_weight,\n",
-        "                              use_multiprocessing = True, workers = 4)"
-      ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "WARNING:tensorflow:multiprocessing can interact badly with TensorFlow, causing nondeterministic deadlocks. For high performance data pipelines tf.data is recommended.\n",
-            "267/316 [========================>.....] - ETA: 30:30 - loss: 82.5057 - acc: 0.6656"
-          ],
-          "name": "stdout"
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "VHy239u4RVC5"
+        "outputId": "d79be9dc-511c-449d-a7c2-3f22dc9b658c"
       },
       "source": [
         "# treinando a rede neural convolucional\n",
         "history = model.fit_generator(train_generator, steps_per_epoch = 81072 // 256, \n",
         "                              validation_data = valid_generator, validation_steps = 4268 // 128,\n",
         "                              callbacks = callbacks, epochs = 10, class_weight = class_weight,\n",
-        "                              use_multiprocessing = True, workers = 16)"
+        "                              use_multiprocessing = True, workers = 8)"
       ],
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Epoch 1/10\n",
+            "WARNING:tensorflow:multiprocessing can interact badly with TensorFlow, causing nondeterministic deadlocks. For high performance data pipelines tf.data is recommended.\n",
+            " 25/316 [=>............................] - ETA: 1:53:34 - loss: 30.9542 - acc: 0.1172"
+          ],
+          "name": "stdout"
+        }
+      ]
     }
   ]
 }
