--- a/4-experiments/experiment5/network-densenet/experiment5_dataset_nih_v3_0.ipynb
+++ b/4-experiments/experiment5/network-densenet/experiment5_dataset_nih_v3_0.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "toc_visible": true,
       "machine_shape": "hm",
-      "authorship_tag": "ABX9TyNdbI6UHlwUD2EH996qYqHc"
+      "authorship_tag": "ABX9TyO+uFJyLX6GcrHPwQIth6cs"
     },
     "kernelspec": {
       "name": "python3",
@@ -69,6 +69,17 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "vz6v6BnzC_8n"
+      },
+      "source": [
+        "### Importação dos dados\n",
+        "***\n",
+        "- Todo o dataset foi pré-processado anteriormente"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "9ka98ZB7lWCQ"
@@ -79,7 +90,7 @@
         "validation_df = pd.read_csv('/content/drive/MyDrive/validation_df.csv', sep = ',', index_col=  0)\n",
         "test_df = pd.read_csv('/content/drive/MyDrive/test_df.csv' , sep = ',', index_col=  0)"
       ],
-      "execution_count": 20,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -98,7 +109,7 @@
         "test_df.loc[test_df.labels == 1, 'labels'] = 'abnormal'\n",
         "test_df.loc[test_df.labels == 0, 'labels'] = 'normal'"
       ],
-      "execution_count": 21,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -109,7 +120,7 @@
           "height": 204
         },
         "id": "g1HO3ajAl1mf",
-        "outputId": "2360faed-d20a-4f2d-ea4a-79f03c6ef171"
+        "outputId": "964923b5-c420-4583-a200-77aa7c630409"
       },
       "source": [
         "# visualizando como é a organização do dataframe pré-processado\n",
@@ -149,43 +160,45 @@
               "      <th>87745</th>\n",
               "      <td>/content/drive/MyDrive/images-nih1/images/0000...</td>\n",
               "      <td>Consolidation</td>\n",
-              "      <td>1</td>\n",
+              "      <td>abnormal</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>82970</th>\n",
               "      <td>/content/drive/MyDrive/images-nih1/images/0000...</td>\n",
               "      <td>No Finding</td>\n",
-              "      <td>0</td>\n",
+              "      <td>normal</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>51704</th>\n",
               "      <td>/content/drive/MyDrive/images-nih3/images/0001...</td>\n",
               "      <td>No Finding</td>\n",
-              "      <td>0</td>\n",
+              "      <td>normal</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>38340</th>\n",
               "      <td>/content/drive/MyDrive/images-nih3/images/0001...</td>\n",
               "      <td>No Finding</td>\n",
-              "      <td>0</td>\n",
+              "      <td>normal</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>71153</th>\n",
               "      <td>/content/drive/MyDrive/images-nih4/images/0002...</td>\n",
               "      <td>Infiltration</td>\n",
-              "      <td>1</td>\n",
+              "      <td>abnormal</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
               "</div>"
             ],
             "text/plain": [
-              "                                             Image Index finding_labels  labels\n",
-              "87745  /content/drive/MyDrive/images-nih1/images/0000...  Consolidation       1\n",
-              "82970  /content/drive/MyDrive/images-nih1/images/0000...     No Finding       0\n",
-              "51704  /content/drive/MyDrive/images-nih3/images/0001...     No Finding       0\n",
-              "38340  /content/drive/MyDrive/images-nih3/images/0001...     No Finding       0\n",
-              "71153  /content/drive/MyDrive/images-nih4/images/0002...   Infiltration       1"
+              "                                             Image Index  ...    labels\n",
+              "87745  /content/drive/MyDrive/images-nih1/images/0000...  ...  abnormal\n",
+              "82970  /content/drive/MyDrive/images-nih1/images/0000...  ...    normal\n",
+              "51704  /content/drive/MyDrive/images-nih3/images/0001...  ...    normal\n",
+              "38340  /content/drive/MyDrive/images-nih3/images/0001...  ...    normal\n",
+              "71153  /content/drive/MyDrive/images-nih4/images/0002...  ...  abnormal\n",
+              "\n",
+              "[5 rows x 3 columns]"
             ]
           },
           "metadata": {
@@ -202,13 +215,13 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "91a2f825-77b1-43cb-8809-bb75fd68a4d8"
+        "outputId": "210bca78-026d-45f4-c5cf-66f1c3c5d0cd"
       },
       "source": [
         "# visualizando a quantidade de imagens disponíveis por classe\n",
         "train_df['finding_labels'].value_counts()"
       ],
-      "execution_count": 26,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -232,7 +245,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 26
+          "execution_count": 5
         }
       ]
     },
@@ -257,7 +270,7 @@
         "                10: total_train_examples / 295,\n",
         "                11: total_train_examples / 2024}"
       ],
-      "execution_count": 36,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -267,7 +280,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "WsfuAOIrl4vX",
-        "outputId": "4743f972-5a46-43e9-bb9b-4f52ed4258db"
+        "outputId": "29a44be0-80fe-4abb-99fb-7613f224197b"
       },
       "source": [
         "# normalizando as imagens de treinamento e aplicando aumento de dados\n",
@@ -309,12 +322,12 @@
         "                                                  class_mode = 'categorical',\n",
         "                                                  target_size = (256, 256))"
       ],
-      "execution_count": 28,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Found 81070 validated image filenames belonging to 12 classes.\n",
+            "Found 81074 validated image filenames belonging to 12 classes.\n",
             "Found 4268 validated image filenames belonging to 12 classes.\n",
             "Found 2640 validated image filenames belonging to 12 classes.\n"
           ],
@@ -325,17 +338,17 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "34NNyYGR97Cr",
-        "outputId": "757753bf-c471-4632-9dde-8ef5153f017a",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "34NNyYGR97Cr",
+        "outputId": "f4a6fda8-f608-4f15-c118-743457213329"
       },
       "source": [
-        "# visualizando a ordem numérica das classes\n",
+        "# visualizando a ordem numérica das classes nos dados de treinamento \n",
         "train_generator.class_indices"
       ],
-      "execution_count": 35,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -358,7 +371,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 35
+          "execution_count": 8
         }
       ]
     },
@@ -374,11 +387,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "6IZSxdnHl7n2",
-        "outputId": "2a49f665-1413-4ef0-afcf-7a5ce405e42c",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "6IZSxdnHl7n2"
       },
       "source": [
         "base_model = DenseNet121(input_shape = (256, 256, 3), weights = 'imagenet', include_top = False)\n",
@@ -399,17 +408,8 @@
         "# concatenando a rede importada com a rede definida (ajuste fino)\n",
         "model = Model(inputs=base_model.input, outputs=predictions)"
       ],
-      "execution_count": 29,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Downloading data from https://storage.googleapis.com/tensorflow/keras-applications/densenet/densenet121_weights_tf_dim_ordering_tf_kernels_notop.h5\n",
-            "29089792/29084464 [==============================] - 0s 0us/step\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": 9,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -423,14 +423,14 @@
         "\n",
         "# para a arquitetura DenseNet, a rede será retreinada a partir da camada 'conv5_block1_1_conv'\n",
         "for layer in model.layers:\n",
-        "    if layer.name == 'conv4_block1_1_conv':\n",
+        "    if layer.name == 'conv5_block1_1_conv':\n",
         "        set_trainable = True\n",
         "    if set_trainable:\n",
         "        layer.trainable = True\n",
         "    else:\n",
         "        layer.trainable = False"
       ],
-      "execution_count": 30,
+      "execution_count": 10,
       "outputs": []
     },
     {
@@ -443,7 +443,7 @@
         "model.compile(optimizer = optimizers.RMSprop(learning_rate = 0.0001), loss = 'categorical_crossentropy', \n",
         "              metrics = ['acc'])"
       ],
-      "execution_count": 31,
+      "execution_count": 11,
       "outputs": []
     },
     {
@@ -458,7 +458,7 @@
         "checkpoint = ModelCheckpoint(filepath, monitor = 'val_acc', verbose = 1, save_best_only = True, \n",
         "                             mode = 'max')"
       ],
-      "execution_count": 32,
+      "execution_count": 12,
       "outputs": []
     },
     {
@@ -470,7 +470,7 @@
         "# definindo um array de callbacks\n",
         "callbacks = [checkpoint]"
       ],
-      "execution_count": 33,
+      "execution_count": 13,
       "outputs": []
     },
     {
@@ -480,7 +480,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "d79be9dc-511c-449d-a7c2-3f22dc9b658c"
+        "outputId": "a547cddc-85df-4260-9e84-ed4418aa82e3"
       },
       "source": [
         "# treinando a rede neural convolucional\n",
@@ -496,7 +496,7 @@
           "text": [
             "Epoch 1/10\n",
             "WARNING:tensorflow:multiprocessing can interact badly with TensorFlow, causing nondeterministic deadlocks. For high performance data pipelines tf.data is recommended.\n",
-            " 25/316 [=>............................] - ETA: 1:53:34 - loss: 30.9542 - acc: 0.1172"
+            "210/316 [==================>...........] - ETA: 24:19 - loss: 28.7983 - acc: 0.1161"
           ],
           "name": "stdout"
         }
